exported to csv

--- a/Notebook/sentiment_analysis.ipynb
+++ b/Notebook/sentiment_analysis.ipynb
@@ -307,6 +307,243 @@
     "tokenizer_kwargs = {'padding':True,'truncation':True,'max_length':510}\n",
     "df_tweets['Sentiment'] = df_tweets['Tweet Content'].apply(lambda tweet: classifier(tweet, **tokenizer_kwargs)[0]['label'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tweet Id</th>\n",
+       "      <th>Tweet URL</th>\n",
+       "      <th>Tweet Posted Time</th>\n",
+       "      <th>Tweet Content</th>\n",
+       "      <th>Tweet Type</th>\n",
+       "      <th>Client</th>\n",
+       "      <th>Retweets Received</th>\n",
+       "      <th>Likes Received</th>\n",
+       "      <th>Tweet Location</th>\n",
+       "      <th>Tweet Language</th>\n",
+       "      <th>User  Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Username</th>\n",
+       "      <th>User Bio</th>\n",
+       "      <th>Verified or Non-Verified</th>\n",
+       "      <th>Profile URL</th>\n",
+       "      <th>User Followers</th>\n",
+       "      <th>User Following</th>\n",
+       "      <th>User Account Creation Date</th>\n",
+       "      <th>Sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"1603309229871452160\"</td>\n",
+       "      <td>https://twitter.com/imrmkhan1/status/160330922...</td>\n",
+       "      <td>15 Dec 2022 08:41:23</td>\n",
+       "      <td>\"Field par Messi aur Mbappe… studio mein @Wayn...</td>\n",
+       "      <td>ReTweet</td>\n",
+       "      <td>\"Twitter for Android\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>Hindi</td>\n",
+       "      <td>\"1584973275628699648\"</td>\n",
+       "      <td>\"iamrmkhan\"</td>\n",
+       "      <td>imrmkhan1</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>Non-Verified</td>\n",
+       "      <td>https://twitter.com/imrmkhan1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>25-Oct-2022 18:21:42</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"1603309229980487681\"</td>\n",
+       "      <td>https://twitter.com/Shahxaze1/status/160330922...</td>\n",
+       "      <td>15 Dec 2022 08:41:23</td>\n",
+       "      <td>\"𝐈𝐭. 𝐂𝐚𝐧𝐧𝐨𝐭. 𝐆𝐞𝐭. 𝐁𝐢𝐠𝐠𝐞𝐫. 𝐓𝐡𝐚𝐧. 𝐓𝐡𝐢𝐬. 🔥\\n\\nGet...</td>\n",
+       "      <td>ReTweet</td>\n",
+       "      <td>\"Twitter for iPhone\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>English</td>\n",
+       "      <td>\"1558508894925869056\"</td>\n",
+       "      <td>\"Shahxaze\"</td>\n",
+       "      <td>Shahxaze1</td>\n",
+       "      <td>\"Shah Rukh Khan Aze 🇦🇿\"</td>\n",
+       "      <td>Non-Verified</td>\n",
+       "      <td>https://twitter.com/Shahxaze1</td>\n",
+       "      <td>247</td>\n",
+       "      <td>232</td>\n",
+       "      <td>13-Aug-2022 17:41:00</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"1603309226469642240\"</td>\n",
+       "      <td>https://twitter.com/SorareAlexandre/status/160...</td>\n",
+       "      <td>15 Dec 2022 08:41:22</td>\n",
+       "      <td>\"🎁 CONCOURS SORARE 🎁\\n\\nJOUEUR À GAGNER : SEKO...</td>\n",
+       "      <td>ReTweet</td>\n",
+       "      <td>\"Twitter for Android\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>French</td>\n",
+       "      <td>\"1592150953871958016\"</td>\n",
+       "      <td>\"Pawastyle45\"</td>\n",
+       "      <td>SorareAlexandre</td>\n",
+       "      <td>\"Je viens de découvrir Sorare et je surkiffe. ...</td>\n",
+       "      <td>Non-Verified</td>\n",
+       "      <td>https://twitter.com/SorareAlexandre</td>\n",
+       "      <td>18</td>\n",
+       "      <td>154</td>\n",
+       "      <td>14-Nov-2022 13:42:50</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"1603309226604236800\"</td>\n",
+       "      <td>https://twitter.com/Woozie178/status/160330922...</td>\n",
+       "      <td>15 Dec 2022 08:41:22</td>\n",
+       "      <td>\"It’ll be a tough night for Europe today.\\n\\n#...</td>\n",
+       "      <td>ReTweet</td>\n",
+       "      <td>\"Twitter for Android\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>English</td>\n",
+       "      <td>\"1492945970295808003\"</td>\n",
+       "      <td>\"Woozie\"</td>\n",
+       "      <td>Woozie178</td>\n",
+       "      <td>\"Truth seeker, nationalist, engineer, gamer\"</td>\n",
+       "      <td>Non-Verified</td>\n",
+       "      <td>https://twitter.com/Woozie178</td>\n",
+       "      <td>19</td>\n",
+       "      <td>131</td>\n",
+       "      <td>13-Feb-2022 19:37:47</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\"1603309227392618496\"</td>\n",
+       "      <td>https://twitter.com/thug_boiiii/status/1603309...</td>\n",
+       "      <td>15 Dec 2022 08:41:22</td>\n",
+       "      <td>\"In defeat or in victory, always say Alhamduli...</td>\n",
+       "      <td>ReTweet</td>\n",
+       "      <td>\"Twitter for Android\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"\"</td>\n",
+       "      <td>English</td>\n",
+       "      <td>\"999001409231212544\"</td>\n",
+       "      <td>\"Itx_madan 🇵🇰💪🇵🇸\"</td>\n",
+       "      <td>thug_boiiii</td>\n",
+       "      <td>\"Content Creator.......https://www.instagram.c...</td>\n",
+       "      <td>Non-Verified</td>\n",
+       "      <td>https://twitter.com/thug_boiiii</td>\n",
+       "      <td>803</td>\n",
+       "      <td>778</td>\n",
+       "      <td>22-May-2018 18:57:51</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Tweet Id                                          Tweet URL  \\\n",
+       "0  \"1603309229871452160\"  https://twitter.com/imrmkhan1/status/160330922...   \n",
+       "1  \"1603309229980487681\"  https://twitter.com/Shahxaze1/status/160330922...   \n",
+       "2  \"1603309226469642240\"  https://twitter.com/SorareAlexandre/status/160...   \n",
+       "3  \"1603309226604236800\"  https://twitter.com/Woozie178/status/160330922...   \n",
+       "4  \"1603309227392618496\"  https://twitter.com/thug_boiiii/status/1603309...   \n",
+       "\n",
+       "      Tweet Posted Time                                      Tweet Content  \\\n",
+       "0  15 Dec 2022 08:41:23  \"Field par Messi aur Mbappe… studio mein @Wayn...   \n",
+       "1  15 Dec 2022 08:41:23  \"𝐈𝐭. 𝐂𝐚𝐧𝐧𝐨𝐭. 𝐆𝐞𝐭. 𝐁𝐢𝐠𝐠𝐞𝐫. 𝐓𝐡𝐚𝐧. 𝐓𝐡𝐢𝐬. 🔥\\n\\nGet...   \n",
+       "2  15 Dec 2022 08:41:22  \"🎁 CONCOURS SORARE 🎁\\n\\nJOUEUR À GAGNER : SEKO...   \n",
+       "3  15 Dec 2022 08:41:22  \"It’ll be a tough night for Europe today.\\n\\n#...   \n",
+       "4  15 Dec 2022 08:41:22  \"In defeat or in victory, always say Alhamduli...   \n",
+       "\n",
+       "  Tweet Type                 Client  Retweets Received  Likes Received  \\\n",
+       "0    ReTweet  \"Twitter for Android\"                  0               0   \n",
+       "1    ReTweet   \"Twitter for iPhone\"                  0               0   \n",
+       "2    ReTweet  \"Twitter for Android\"                  0               0   \n",
+       "3    ReTweet  \"Twitter for Android\"                  0               0   \n",
+       "4    ReTweet  \"Twitter for Android\"                  0               0   \n",
+       "\n",
+       "  Tweet Location Tweet Language               User  Id               Name  \\\n",
+       "0             \"\"          Hindi  \"1584973275628699648\"        \"iamrmkhan\"   \n",
+       "1             \"\"        English  \"1558508894925869056\"         \"Shahxaze\"   \n",
+       "2             \"\"         French  \"1592150953871958016\"      \"Pawastyle45\"   \n",
+       "3             \"\"        English  \"1492945970295808003\"           \"Woozie\"   \n",
+       "4             \"\"        English   \"999001409231212544\"  \"Itx_madan 🇵🇰💪🇵🇸\"   \n",
+       "\n",
+       "          Username                                           User Bio  \\\n",
+       "0        imrmkhan1                                                 \"\"   \n",
+       "1        Shahxaze1                            \"Shah Rukh Khan Aze 🇦🇿\"   \n",
+       "2  SorareAlexandre  \"Je viens de découvrir Sorare et je surkiffe. ...   \n",
+       "3        Woozie178       \"Truth seeker, nationalist, engineer, gamer\"   \n",
+       "4      thug_boiiii  \"Content Creator.......https://www.instagram.c...   \n",
+       "\n",
+       "  Verified or Non-Verified                          Profile URL  \\\n",
+       "0             Non-Verified        https://twitter.com/imrmkhan1   \n",
+       "1             Non-Verified        https://twitter.com/Shahxaze1   \n",
+       "2             Non-Verified  https://twitter.com/SorareAlexandre   \n",
+       "3             Non-Verified        https://twitter.com/Woozie178   \n",
+       "4             Non-Verified      https://twitter.com/thug_boiiii   \n",
+       "\n",
+       "   User Followers  User Following User Account Creation Date Sentiment  \n",
+       "0              11              12       25-Oct-2022 18:21:42   neutral  \n",
+       "1             247             232       13-Aug-2022 17:41:00   neutral  \n",
+       "2              18             154       14-Nov-2022 13:42:50   neutral  \n",
+       "3              19             131       13-Feb-2022 19:37:47   neutral  \n",
+       "4             803             778       22-May-2018 18:57:51  positive  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tweets.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tweets.to_csv('../Data/FIFA World Cup 2022 Twitter Dataset/tweets_sentiment.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
